--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ Flask-Script
 WTForms
 Flask-PyMongo
 dnspython
-https://download.pytorch.org/whl/cpu/torch-1.0.1.post2-cp37-cp37m-linux_x86_64.whl
+torch==1.3.1+cpu https://download.pytorch.org/whl/torch_stable.html
 numpy
 flask_dropzone
 flask_uploads
