--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ Flask-Script
 WTForms
 Flask-PyMongo
 dnspython
-torch==1.3.1+cpu https://download.pytorch.org/whl/torch_stable.html
+torch==1.3.1+cpu
 numpy
 flask_dropzone
 flask_uploads
