--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Flask-PyMongo
 dnspython
 https://download.pytorch.org/whl/cpu/torch-1.3.1%2Bcpu-cp36-cp36m-linux_x86_64.whl
 torchvision
+PIL
 numpy
 flask_dropzone
 flask_uploads
