--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ Flask
 Flask-Login
 Flask-Script
 WTForms
+PIL
+Pillow
 Flask-PyMongo
 dnspython
 https://download.pytorch.org/whl/cpu/torch-1.3.1%2Bcpu-cp36-cp36m-linux_x86_64.whl
