--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ Flask
 Flask-Login
 Flask-Script
 WTForms
-'pillow<7.0.0'
+pillow
 Flask-PyMongo
 dnspython
 https://download.pytorch.org/whl/cpu/torch-1.3.1%2Bcpu-cp36-cp36m-linux_x86_64.whl
