--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ WTForms
 pillow
 Flask-PyMongo
 dnspython
-https://download.pytorch.org/whl/cpu/torch-1.3.1%2Bcpu-cp36-cp36m-linux_x86_64.whl
+torch
 numpy
 flask_dropzone
 flask_uploads
